fix report pdf - chart titles overflow AX-7907 (#5932)

--- a/plugins/gui/templates/report/styles/styles.css
+++ b/plugins/gui/templates/report/styles/styles.css
@@ -245,6 +245,10 @@ a {
     vertical-align: top;
 }
 
+.cover .title {
+    word-wrap: break-word;
+}
+
 .cover .break{
     height: 305px;
 }
